@@ -10,6 +10,9 @@ releases may be found in the file ChangeLog.txt.
 
 Bugs fixed in 3.20.1
 ====================
+[2918306, 2816066, 2798788, 2446052, 2837591, 2917066, ...] Re-instate
+AutoType via shortcut and when an entry has been selected via the
+Find Toolbar.
 [2921935] Dragbar now works in List view without needing the mouse to activate.
 [2918849] Fixed icon no longer appearing in taskbar when locking due to
 workstation lock and terminal services running.
